--- a/src/index.html
+++ b/src/index.html
@@ -1,2 +1,10 @@
 // this file will contain the html page of the main dashboard of the city portal
 
+<html>
+  <head>
+    <title>mainpage</title>
+  </head>
+    <body>
+      this is major body to be uplaoded 
+    </body>
+</html>
