--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-// this file will contain the html page of the main dashboard of the city portal
+// this file will contain the html page of the main dashboard of the city portal and needed to be used for this purpose and will be required for this whenever you neede to work along the tasks 
 
 <html>
   <head>
